[tool.poetry]
name = "weni-profilers"
version = "0.0.2"
description = ""
authors = ["sandro.meireles <sandro.meirelesdev@gmail.com>"]
readme = "README.md"
packages = [
    { include = "weni" }
]

[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
